       (usually "~/.config/MusicBrainz/Picard")
   * Picard no longer logs every action and doesn't saves the logs. To enable
     more debug logging, use command line argument "-d" or "--debug" or
     environment variable "PICARD_DEBUG".
 * New Features:
   * Save embedded images to MP4 files.
   * Added context menu to albums for selecting releases.
 * Bug Fixes:
   * Deleting files from clusters increments total time rather than
     decrementing it. (#2965)
   * Update metadata boxes and cover art for selected items. (#2498)

Version 0.9.0alpha11 - 2007-05-27
 * New Features:
   * Added "Edit" button to the tag editor.
 * Bug Fixes:
   * Fixed initialization of gettext translations.

Version 0.9.0alpha10 - 2007-05-27
 * New Features:
   * New TaggerScript function $len(text). (#2843)
   * Don't compress huge ID3 frames. (#2850)
   * Move "Add Cluster As Release" to a plugin.
   * Allow horizontal scrollbar in the file browser panel. (#2856)
   * Removed "Basic" tab from the "Details" window, "Advanced" tab renamed to "Metadata".
   * The tag editor can be used to edit multiple files. (#2893)
 * Bug Fixes:
   * F1 for Help instead of CTRL+H on Windows and Linux. (#2485, Nikolai Prokoschenko)
   * Tabbing focus transition from search isn't as expected. (#2546, Nikolai Prokoschenko)
   * Display an error message if launching a web browser failed.
   * Fixed web-service error caused PUID submissions.
   * Change function $gt(), $gte(), $lt(), $lte() to compare numbers, not strings. (#2848)
   * Fixed kfmclient launching under KDE/Python 2.5.
   * Fixed similarity calculation of non-latin texts. (#2891)
   * Don't try to auto-analyze files with "loading" errors. (#2862)

Version 0.9.0alpha9 - 2007-05-12
 * New Features:
   * The tag editor now accepts free-text tag names.
   * Load 'DJ-mixed by' AR data to %djmixer% tag.
   * Load 'Mixed by' AR data to %mixer% tag.
   * Delay the webservice client to do max. 1 request per second.