@@ -11,10 +11,12 @@ Version 0.9.0alpha12 - 2007-06-XX
  * New Features:
    * Save embedded images to MP4 files.
    * Added context menu to albums for selecting releases.
+   * Added internal log viewer.
  * Bug Fixes:
    * Deleting files from clusters increments total time rather than
      decrementing it. (#2965)
    * Update metadata boxes and cover art for selected items. (#2498)
+   * Display error message for tracks.
 
 Version 0.9.0alpha11 - 2007-05-27
  * New Features:
